# GTFR-CG

./: .env.example  .gitignore  CHANGELOG.md  README.md  app.py  constants.py  docker-compose.yml  functions.py  installer.py  launcher.py  package-lock.json  package.json  requirements.txt  statistics.py
.github/: pull_request_template.md
Artwork/: ArtworkProcessing.py  app.py  (+5 more)
server/: .env.example  Dockerfile  README.md  installer.py  launcher.py  pyproject.toml  requirements.txt
server/src/: app.py  cache.py  constants.py  decorators.py  docs.py  graveyard.py  l10n.py  logger.py  statistics.py  typing_gtfr.py
server/src/constants/: cards_generation.py  dotenv.py  enums.py  image_generation.py  paths.py  pillow.py  regex.py  responses.py  statistics.py  time.py
server/src/locales/: en_US.json  fr_FR.json
server/src/routes/: artwork_generation.py  artwork_processing.py  cards_generation.py  home.py  lyrics.py  processed_images.py
server/src/routes/artwork_generation/: artwork_generation.py  itunes_image.py  itunes_search.py  local_file.py  utils.py  youtube_thumbnail.py
server/src/routes/artwork_processing/: artwork_processing.py  pillow.py  process_artworks.py
server/src/routes/cards_generation/: cards_generation.py  generate.py  generate_single.py  pillow.py  save_cards_contents.py  settings.py  utils.py
server/src/routes/home/: genius_token.py  home.py  l10n.py  statistics.py
server/src/routes/lyrics/: genius.py  get_genius_lyrics.py  lyrics.py
server/src/utils/: file_utils.py  soft_utils.py  string_utils.py  time_utils.py  web_utils.py
(+480 files in other folders)
