[project]
requires-python = ">=3.11"
name = "GTFR-CG"
version = "1.5.3"

[tool.black]
diff = true
#check = true
color = true
exclude = "/__*__/"

target-version = ["py311"]
line-length = 120
skip-string-normalization = true

[tool.poetry.dependencies]
mypy = "^1.15.0"
Flask = ">=3.0.3"
Flask-Session = ">=0.8.0"
flask_cors = ">=5.0.0"
types-Flask-Cors = ">=5.0.0"
waitress = ">=3.0.0"
types-waitress = ">=3.0.1"
requests = ">=2.32.3"
types-requests = ">=2.32.0.20250328"
lyricsgenius = ">=3.2.0"
flask-restx = ">=1.3.0"
pytz = ">=2024.2"
python-dotenv = ">=1.0.1"
pillow = ">=10.4.0"
colorthief = "0.2.1"